@@ -2,6 +2,7 @@
   -.discover() returns .IPAddress instead of .Address
   -Moved some code from _parseIdentityResponse() to lgxDevice.py to simplify function
   -Fixed issue with some devices failing to parse
+  -Better filtering discovered devices
 
 06/15/16
   -Added GetTagList() to retreive the controller scope tags
